--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
   <header>
     <nav class="fixed-top navbar navbar-expand-lg">
       <div class="container-fluid px-5">
-        <a class="navbar-brand" id="logo-Text" href="index.html">Class Digital</a>
+        <a class="navbar-brand" id="logo-Text" href="home.html">Class Digital</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -31,10 +31,10 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#tentangkami">Tentang Kami</a>
+              <a class="nav-link active" href="#panduan">Panduan</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#panduan">Panduan</a>
+              <a class="nav-link active" href="#tentangkami">Tentang Kami</a>
             </li>
           </ul>
           <div class="d-flex ms-3">
