--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>CLASSROOM DIGITAL</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-    
     <!-- Membuat SideBar-->
     <div class="wrapper">
         <aside id="sidebar">
@@ -110,7 +109,7 @@
                         <textarea class="form-control" id="about" rows="3"
                             placeholder="Ceritakan tentang diri Anda"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Simpan</button>
+                    <button type="submit" class="btn btn-primary">SIMPAN</button>
                 </form>
             </div>
         </div>
