--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLASS DIGITAL</title>
+    <title>CLASSROOM DIGITAL</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,6 +12,10 @@
 
 <body class="login-page">
 
+    <!-- Saat halaman sedang memuat, div ini akan menampilkan animasi -->
+    <div class="preloader">
+        <img src="img/loading.gif">
+    </div>
     <!-- Jumbotron untuk Signup -->
     <div class="jumbotron-login">
         <h1 class="display-5 text-center">SIGNUP</h1>
